# led-matrix-apps

./: flocking.js  flocking.ts  workspace.code-workspace
nodejs-led-matrix-apps/: .gitignore  package-lock.json  package.json  tsconfig.json
nodejs-led-matrix-apps/src/: index.ts
nodejs-led-matrix-apps/src/flocking/: flocking.ts  run.ts
nodejs-led-matrix-apps/src/predator-and-prey/: predator-and-prey.ts  run.ts
nodejs-led-matrix-apps/src/test/: run.ts  square.ts
nodejs/flocking/: easybotics-rpi-rgb-led-matrix.d.ts  package-lock.json  package.json
rust/src/: main.rs
rust_/: Cargo.toml
