[package]
name = "rust"
version = "0.1.0"
authors = ["Jannik Keye <jannik.keye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_rpi_led_matrix = { git = "https://github.com/dabch/rust-rpi-rgb-led-bindings" }